--- a/test.html
+++ b/test.html
@@ -11,8 +11,7 @@
 
   <button id="kakao-share-btn">💌 이 버튼으로 공유 테스트하기</button>
 
-  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js"
-    integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAGiAEiF7ZmUFIjV2Vd2rZp" crossorigin="anonymous"></script>
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js"></script>
 
   <script>
     // 2. 카카오 SDK 초기화
@@ -49,4 +48,5 @@
   </script>
 
 </body>
+
 </html>
