--- a/test.html
+++ b/test.html
@@ -1,52 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8" />
-<title>카카오 공유 테스트</title>
-</head>
-<body>
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.6/kakao.min.js" integrity="sha384-WAtVcQYcmTO/N+C1N+1m6Gp8qxh+3NlnP7X1U7qP6P5dQY/MsRBNTh+e1ahJrkEm" crossorigin="anonymous"></script>
 
-  <h1>카카오톡 공유하기 테스트 페이지</h1>
-  <p>이 버튼을 눌러 공유 기능을 확인합니다.</p>
+<script>
+  Kakao.init('${7d71cfdbf0064e046226776f19adfde2}');  // 사용하려는 앱의 JavaScript 키 입력
+</script>
 
-  <button id="kakao-share-btn">💌 이 버튼으로 공유 테스트하기</button>
+<a id="kakaotalk-sharing-btn" href="javascript:shareMessage()">
+  <img src="https://github.com/shy251227/wedding-invitation/blob/main/src/images/cover.png"
+    alt="카카오톡 공유 보내기 버튼" />
+</a>
 
-  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js"></script>
-
-  <script>
-    // 2. 카카오 SDK 초기화
-    // PART 1에서 복사한 내 JavaScript 키를 '따옴표 안에' 붙여넣으세요.
-    Kakao.init('7d71cfdbf0064e046226776f19adfde2');
-
-    // SDK 초기화 여부를 콘솔에 출력해서 확인합니다.
-    console.log('카카오 SDK 초기화 상태:', Kakao.isInitialized());
-
-    // 3. 공유 버튼을 눌렀을 때 실행될 코드
-    document.getElementById('kakao-share-btn').addEventListener('click', function() {
-      Kakao.Share.sendDefault({
-        objectType: 'feed',
-        content: {
-          title: '테스트 중: 우리 결혼합니다 💕', // 공유될 제목
-          description: '이 메시지가 보이면 성공입니다!', // 공유될 설명
-          imageUrl: 'https://mud-kage.kakao.com/dn/NTmhS/btqfEUdFAUf/FjKzkZsnoeE4o19klTOVI1/openlink_640x640s.jpg', // 테스트용 기본 이미지
-          link: {
-            mobileWebUrl: 'https://developers.kakao.com', // 공유될 링크 (모바일)
-            webUrl: 'https://developers.kakao.com', // 공유될 링크 (PC)
-          },
-        },
-        buttons: [
-          {
-            title: '웹으로 보기',
-            link: {
-              mobileWebUrl: 'https://developers.kakao.com',
-              webUrl: 'https://developers.kakao.com',
-            },
-          },
-        ]
-      });
+<script>
+  function shareMessage() {
+    Kakao.Share.sendCustom({
+      templateId: ${ID},  // 공유 할 메시지 템플릿 ID 입력
+      templateArgs: ${USER_ARGUMENT},  // 메시지 템플릿에 설정한 사용자 인자 JSON 입력
     });
-  </script>
-
-</body>
-
-</html>
+  }
+</script>
