--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!--
 <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.6/kakao.min.js" integrity="sha384-WAtVcQYcmTO/N+C1N+1m6Gp8qxh+3NlnP7X1U7qP6P5dQY/MsRBNTh+e1ahJrkEm" crossorigin="anonymous"></script>
 
 <script>
@@ -17,3 +18,54 @@
     });
   }
 </script>
+-->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>카카오 공유 최종 테스트</title>
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.6/kakao.min.js" integrity="sha384-WAtVcQYcmTO/N+C1N+1m6Gp8qxh+3NlnP7X1U7qP6P5dQY/MsRBNTh+e1ahJrkEm" crossorigin="anonymous"></script>
+</head>
+<body>
+
+  <h2>카카오톡 공유 버튼</h2>
+  <p>아래 이미지를 클릭하면 공유됩니다.</p>
+
+  <a id="kakaotalk-sharing-btn" href="javascript:void(0)">
+    <img src="https://raw.githubusercontent.com/shy251227/wedding-invitation/main/src/images/cover.png" alt="카카오톡 공유 보내기 버튼" style="width: 200px; border: 1px solid #ddd;" />
+  </a>
+
+  <script>
+    // 3. Kakao.init() 초기화 (문법 오류를 완벽하게 수정한 부분)
+    Kakao.init('7d71cfdbf0064e046226776f19adfde2');
+
+    // 4. 버튼에 공유 기능 연결하기 (가장 간단하고 확실한 sendDefault 방식으로 구현)
+    document.getElementById('kakaotalk-sharing-btn').addEventListener('click', function() {
+      Kakao.Share.sendDefault({
+        objectType: 'feed',
+        content: {
+          title: '우리 결혼합니다 💕',
+          description: '소중한 분들을 초대합니다. 오셔서 자리를 빛내주세요.',
+          // 실제 청첩장 대표 이미지 주소입니다.
+          imageUrl: 'https://raw.githubusercontent.com/shy251227/wedding-invitation/main/src/images/cover.png',
+          link: {
+            mobileWebUrl: 'https://shy251227.github.io/wedding-invitation/',
+            webUrl: 'https://shy251227.github.io/wedding-invitation/',
+          },
+        },
+        buttons: [
+          {
+            title: '청첩장 보러가기',
+            link: {
+              mobileWebUrl: 'https://shy251227.github.io/wedding-invitation/',
+              webUrl: 'https://shy251227.github.io/wedding-invitation/',
+            },
+          }
+        ]
+      });
+    });
+  </script>
+
+</body>
+</html>
