--- a/test.html
+++ b/test.html
@@ -45,8 +45,8 @@
       Kakao.Share.sendDefault({
         objectType: 'feed',
         content: {
-          title: '우리 결혼합니다 💕',
-          description: '소중한 분들을 초대합니다. 오셔서 자리를 빛내주세요.',
+          title: '정하윤 💕 차승훈 결혼합니다.',
+          description: '25년 12월 27일 토요일 오전 11시 W시티 컨벤션 울산 웨딩홀',
           // 실제 청첩장 대표 이미지 주소입니다.
           imageUrl: 'https://raw.githubusercontent.com/shy251227/wedding-invitation/main/src/images/cover.png',
           link: {
@@ -69,3 +69,4 @@
 
 </body>
 </html>
+
