--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.6/kakao.min.js"
-            integrity="sha34-WAtVcQYcmTO/N+C1N+1m6Gp8qxh+3NlnP7X1U7qP6P5dQY/MsRBNTh+e1ahJrkEm"
-            crossorigin="anonymous">
+  <head>
+      <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.6/kakao.min.js"
+              integrity="sha34-WAtVcQYcmTO/N+C1N+1m6Gp8qxh+3NlnP7X1U7qP6P5dQY/MsRBNTh+e1ahJrkEm"
+              crossorigin="anonymous">
 
-    </script>
+      </script>
     <meta charset="utf-8" />
     <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0"
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0"
     />
     <meta property="og:type" content="website" />
     <meta
-            property="og:title"
-            content="<%= BRIDE_FULLNAME %> ❤️ <%= GROOM_FULLNAME %> 결혼합니다."
+      property="og:title"
+      content="<%= BRIDE_FULLNAME %> ❤️ <%= GROOM_FULLNAME %> 결혼합니다."
     />
-    <meta property="og:image" content="https://shy251227.github.io/kakaotest/preview_img.png" />
-    <meta property="og:url" content="https://shy251227.github.io/kakaotest/" />
+    <meta property="og:image" content="https://shy251227.github.io/wedding-invitation/preview_img_test.png" />
+    <meta property="og:url" content="https://shy251227.github.io/wedding-invitation/" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
     <link rel="preload" href="/MapoGoldenPierA.woff" as="font" crossorigin />
     <link rel="preload" href="/AlluraRegular.woff" as="font" crossorigin />
-    <link rel="preload" href="/HakgyoansimMulgyeolOTFB.otf" as="font" crossorigin />
-    <link rel="preload" href="/Cafe24Gowoonbam.woff" as="font" crossorigin />
-    <link rel="preload" href="/Hakgyoansim_BandalOTFL.otf" as="font" crossorigin />
-    <link rel="preload" href="/Hakgyoansim_SiganpyoOTFR.otf" as="font" crossorigin />
+      <link rel="preload" href="/HakgyoansimMulgyeolOTFB.otf" as="font" crossorigin />
+      <link rel="preload" href="/Cafe24Gowoonbam.woff" as="font" crossorigin />
+      <link rel="preload" href="/Hakgyoansim_BandalOTFL.otf" as="font" crossorigin />
+      <link rel="preload" href="/Hakgyoansim_SiganpyoOTFR.otf" as="font" crossorigin />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/font.css" />
     <title><%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다.</title>
-</head>
-<body>
-<div id="root"></div>
+  </head>
+  <body>
+    <div id="root"></div>
 
-<script>
-    (function(){
-      var redirect = sessionStorage.redirect;
-      delete sessionStorage.redirect;
-      if (redirect && redirect != location.href) {
-        history.replaceState(null, null, redirect);
-      }
-    })();
-</script>
+    <script>
+      (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
 
-<script type="module" src="/src/index.tsx"></script>
-</body>
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
 </html>
